--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "apimatic/mdnotesccg",
+    "name": "asadali214/mdnotesccg",
     "description": "API for Markdown Notes app.",
     "type": "library",
     "keywords": [
